--- a/project1st of student management system.ipynb
+++ b/project1st of student management system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNUqqp1XHleyiFKUeAH2OD/",
+      "authorship_tag": "ABX9TyMiA5QHHp4I7w0KWXe3f/Qc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "wjKCmeFyf6jW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af845513-f752-45a1-8c78-5dfc680f8d4d"
+        "outputId": "2d0f70c4-56b1-4751-f245-edf9ed6379cd"
       },
       "outputs": [
         {
@@ -66,7 +66,8 @@
             " 4. To search data\n",
             " 5. Exit\n",
             " Please choose any one option:-2\n",
-            "enter the student name:Dabbu\n",
+            "enter the student name:Soni\n",
+            " Name is added successfully...\n",
             "Do u want continue(Y/N)y\n",
             "_______________________________________________________________________________________________\n",
             " ***WELCOME TO STUDENT MANAGEMENT SYSTEM*** \n",
@@ -77,7 +78,7 @@
             " 4. To search data\n",
             " 5. Exit\n",
             " Please choose any one option:-3\n",
-            "Enter name which u want delete:Soni\n",
+            "Enter name which u want delete:Ad\n",
             "name doesn't exist\n",
             "Do u want continue(Y/N)y\n",
             "_______________________________________________________________________________________________\n",
@@ -89,8 +90,57 @@
             " 4. To search data\n",
             " 5. Exit\n",
             " Please choose any one option:-3\n",
-            "Enter name which u want delete:Dabbu\n",
+            "Enter name which u want delete:Soni\n",
             "sucessful deleted ......\n",
+            "Do u want continue(Y/N)y\n",
+            "_______________________________________________________________________________________________\n",
+            " ***WELCOME TO STUDENT MANAGEMENT SYSTEM*** \n",
+            "_______________________________________________________________________________________________\n",
+            " 1. To View Student list\n",
+            " 2. To add new list\n",
+            " 3. To remove the data\n",
+            " 4. To search data\n",
+            " 5. Exit\n",
+            " Please choose any one option:-1\n",
+            "student list is\n",
+            "David\n",
+            "loue\n",
+            "khushboo\n",
+            "Riya\n",
+            "Do u want continue(Y/N)y\n",
+            "_______________________________________________________________________________________________\n",
+            " ***WELCOME TO STUDENT MANAGEMENT SYSTEM*** \n",
+            "_______________________________________________________________________________________________\n",
+            " 1. To View Student list\n",
+            " 2. To add new list\n",
+            " 3. To remove the data\n",
+            " 4. To search data\n",
+            " 5. Exit\n",
+            " Please choose any one option:-4\n",
+            "Enter name which u want find:Soni\n",
+            "name doesn't exist\n",
+            "Do u want continue(Y/N)y\n",
+            "_______________________________________________________________________________________________\n",
+            " ***WELCOME TO STUDENT MANAGEMENT SYSTEM*** \n",
+            "_______________________________________________________________________________________________\n",
+            " 1. To View Student list\n",
+            " 2. To add new list\n",
+            " 3. To remove the data\n",
+            " 4. To search data\n",
+            " 5. Exit\n",
+            " Please choose any one option:-4\n",
+            "Enter name which u want find:David\n",
+            "sucessful founded ......\n",
+            "Do u want continue(Y/N)y\n",
+            "_______________________________________________________________________________________________\n",
+            " ***WELCOME TO STUDENT MANAGEMENT SYSTEM*** \n",
+            "_______________________________________________________________________________________________\n",
+            " 1. To View Student list\n",
+            " 2. To add new list\n",
+            " 3. To remove the data\n",
+            " 4. To search data\n",
+            " 5. Exit\n",
+            " Please choose any one option:-5\n",
             "Do u want continue(Y/N)n\n"
           ]
         }
@@ -104,9 +154,15 @@
         "def add():\n",
         "  s=input(\"enter the student name:\")\n",
         "  l.append(s)\n",
+        "  print(\" Name is added successfully...\")\n",
         "def remove():\n",
         "  s=input(\"Enter name which u want delete:\")\n",
-        "  for i in l:\n",
+        "  if s in l:\n",
+        "    l.remove(s)\n",
+        "    print(\"sucessful deleted ......\")\n",
+        "  else:\n",
+        "    print(\"name doesn't exist\")\n",
+        "'''  for i in l:\n",
         "    if s==i:\n",
         "      l.remove(s)\n",
         "      f=0\n",
@@ -119,10 +175,15 @@
         "    print(\"name doesn't exist\")\n",
         "\n",
         "\n",
-        "\n",
+        "'''\n",
         "def search():\n",
         "  s=input(\"Enter name which u want find:\")\n",
-        "  for i in l:\n",
+        "  if s in l:\n",
+        "    print(\"sucessful founded ......\")\n",
+        "  else:\n",
+        "    print(\"name doesn't exist\")\n",
+        "\n",
+        "  '''for i in l:\n",
         "    if s==i:\n",
         "      f=0\n",
         "      print(\"sucessful founded ......\")\n",
@@ -132,7 +193,7 @@
         "  if f==1:\n",
         "     print(\"not found.....\")\n",
         "\n",
-        "\n",
+        "'''\n",
         "\n",
         "while True:\n",
         "  print(\"_______________________________________________________________________________________________\")\n",
