--- a/Project_2_of_bank_management_system.ipynb
+++ b/Project_2_of_bank_management_system.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwY5NeWFMtjx97sjvc5LgK",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMbo2IA6Tk5x0zX/L2av0wY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,19 +30,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Geec74ssmjFZ",
-        "outputId": "41fe7cd4-3665-4177-b9db-26f4034ca8e5"
+        "outputId": "f9b6a782-5403-47dc-96d4-3ba67021f522"
       },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "_______________________________________________________________________________________________\n",
+            " \t \t \t Bank MANAGEMENT SYSTEM*** \n",
+            "_______________________________________________________________________________________________\n",
+            " 1. New Customer\n",
+            " 2. Existing Customer\n",
+            " 3. Exit\n",
+            " Please choose any one option:-1\n",
+            "Enter account no. :33\n",
+            "Enter Name :\n",
+            "Enter Address :\n",
+            "Enter Phone no. :\n",
+            "Enter Govt Id :\n",
+            "Enter Account Type :\n",
+            "Enter Amount :200\n",
+            "Account Created\n",
+            "Do u want continue(Y/N)y\n",
             "_______________________________________________________________________________________________\n",
             " \t \t \t Bank MANAGEMENT SYSTEM*** \n",
             "_______________________________________________________________________________________________\n",
@@ -58,8 +76,8 @@
         "l={\"account no.\":'' , 'Name':'','Address':'','Phone no.':'','Govt Id':'','Account Type':'','Amount':''}\n",
         "def new():\n",
         "  for i in l.keys():\n",
-        "    print('Enter ',i,\":\")\n",
-        "    j=input()\n",
+        "\n",
+        "    j=input('Enter %s :'%i)\n",
         "    k.append(j)\n",
         "  global final\n",
         "  final=dict(zip(l,k))\n",
@@ -125,45 +143,6 @@
         "    continue\n",
         "  else:\n",
         "    break"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "k=[]\n",
-        "final={}\n",
-        "for i in range(3):\n",
-        "  l={i:{\"account no.\":'' , 'Name':'','Address':'','Phone no.':'','Govt Id':'','Account Type':'','Amount':''}}\n"
-      ],
-      "metadata": {
-        "id": "PeBpDYBts_uT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"1.Check Balance\\n2.Withdraw\\n3.Deposit \")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_Lc2H_si8_91",
-        "outputId": "0566118b-b6e8-4e2f-f4c0-715cefaadfb3"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1.Check Balance\n",
-            "2.Withdraw\n",
-            "3.Deposit \n"
-          ]
-        }
       ]
     }
   ]
